# vulture-nest

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  a2a-capability-lattice.html  a2a-mcp-contrast.html  a2a-protocol.html  actionable-vs-reference.html  adk-advanced-capabilities.html  adk-artifact-service.html  adk-callbacks-and-lifecycle.html  adk-evaluation-framework.html  adk-go-implementation.html  adk-long-term-memory.html  adk-moc.html  adk-multi-agent-orchestration.html  adk-session-service.html  agent-actions-unit.html  agent-actions.html  agent-configuration-sync-strategy.html  agent-development-kit.html  agent-diversity-scaling.html  agent-evaluation.html  agent-knowledge-vault.html  agent-note-conventions.html  agent-observability.html  agent-skills-index.html  agent-thought-cycle.html  agent-tools.html  agentic-frameworks-moc.html  agentic-protocols.html  agentic-rag.html  agentic-tdd-patterns.html  agents-in-games.html  ai-personal-computer-specs.md  alternative-agent-frameworks.html  anthropic-adaptive-thinking.html  anthropic-agentic-loop.html  (+416 more)
.claude/: settings.local.json
00_Raw/: .ragignore  LLM Wiki.md  _manifest.yaml  adk-documentation.md  agent-configuration-sync-strategy.md  agent-knowledge-vault.md  agent-note-conventions.md  agent-skills-index.md  foundry-local.md  hf-agents-bonus1.md  hf-agents-bonus2.md  hf-agents-bonus3.md  hf-agents-course-unit1.md  hf-agents-course-unit2.md  hf-agents-final-units.md  (+24 more)
00_Raw/tier-0/: Cargo.toml
00_Raw/tier-0/src/: capability.rs  error.rs  gate.rs  main.rs  proof.rs  state.rs
(+876 files in other folders)
